# dobot_quad_balance_control

./: README.md  README.zh-CN.md
balance_outputs/: balance_attitude_20260515_114447.csv  balance_attitude_20260515_114447.html
src/dobot_balance_control_demo/: package.xml  setup.cfg  setup.py
src/dobot_balance_control_demo/config/: balance_control_config.yaml
src/dobot_balance_control_demo/dobot_balance_control_demo/: __init__.py  attitude_plot_recorder_node.py  balance_controller_node.py  config.py  demo_monitor_node.py  imu_reader_node.py
src/dobot_balance_control_demo/launch/: balance_control.launch.py
