<?xml version="1.0"?>
<package format="3">
  <name>dobot_balance_control_demo</name>
  <version>0.1.0</version>
  <description>Dobot quadruped IMU attitude balance compensation teaching demo.</description>
  <maintainer email="support@example.com">Dobot Demo Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

